fix: handle vertical scrolling issue on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -130,6 +130,23 @@ html {
   }
 }
 
+.panic-container {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+  touch-action: none;
+}
+
+.pan-content {
+  position: absolute;
+  left: 0;
+  top: 0;
+  will-change: transform;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
 snow-overlay {
   position: relative;
 
